fix communicator, send coordinates upon release method call, add console out view to the screen, add debug flags

--- a/clients/android/socket-drawing-app/app/src/main/res/layout/activity_main.xml
+++ b/clients/android/socket-drawing-app/app/src/main/res/layout/activity_main.xml
@@ -13,14 +13,20 @@
         android:layout_height="0dp"
         android:layout_weight="1"/>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.3">
+    <!--<ScrollView-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="0dp"-->
+    <!--android:layout_weight="0.3">-->
 
-        <TextView
-            android:id="@+id/console_out"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </ScrollView>
+    <TextView
+        android:id="@+id/console_out"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/black"
+        android:gravity="bottom"
+        android:maxLines="10"
+        android:scrollbars="vertical"
+        android:textColor="@android:color/white"
+        android:visibility="gone"/>
+    <!--</ScrollView>-->
 </LinearLayout>
